--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -44,6 +44,7 @@
 @import 'blocks/google-my-business-stats-nudge/style';
 @import 'blocks/image-editor/style';
 @import 'blocks/inline-help/style';
+@import 'blocks/installments-plan-picker/style';
 @import 'blocks/like-button/style';
 @import 'blocks/nps-survey/style';
 @import 'blocks/plan-storage/style';
