--- a/client/my-sites/google-my-business/stats/style.scss
+++ b/client/my-sites/google-my-business/stats/style.scss
@@ -60,3 +60,14 @@
 		width: 100%;
 	}
 }
+
+.gmb-stats__metric-chart {
+	display: flex;
+	margin-top: 14px;
+	align-items: center;
+	justify-content: space-evenly;
+
+	.pie-chart {
+		margin-right: 14px;
+	}
+}
