Add rough line chart component

--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -167,6 +167,7 @@
 @import 'components/input-chrono/style';
 @import 'components/jetpack-colophon/style';
 @import 'components/keyed-suggestions/style';
+@import 'components/line-chart/style';
 @import 'components/list-end/style';
 @import 'components/logged-out-form/style';
 @import 'components/language-picker/style';
