--- a/client/my-sites/google-my-business/location/style.scss
+++ b/client/my-sites/google-my-business/location/style.scss
@@ -9,28 +9,6 @@
 	&:after {
 		display: none; // Disables clearfix that messes up with Flexbox alignment
 	}
-
-	.button {
-		align-self: stretch;
-
-		@include breakpoint( '<480px' ) {
-			text-align: center;
-		}
-
-		@include breakpoint( '480px-960px' ) {
-			align-self: flex-start;
-		}
-
-		@include breakpoint( '<960px' ) {
-			margin-top: 10px;
-		}
-
-		@include breakpoint( '>960px' ) {
-			align-self: center;
-			flex-shrink: 0;
-			margin-left: 15px;
-		}
-	}
 }
 
 .gmb-location__content {
@@ -38,7 +16,7 @@
 }
 
 .gmb-location__logo,
-.gmb-location__photo {
+.gmb-location__picture {
 	border-radius: 50%;
 	height: 60px;
 	width: 60px;
