--- a/client/my-sites/google-my-business/select-location/style.scss
+++ b/client/my-sites/google-my-business/select-location/style.scss
@@ -1,5 +1,33 @@
-@import 'my-sites/google-my-business/style';
 
 .gmb-select-location__add {
 	margin-top: 16px;
+}
+
+.gmb-location {
+	.button, .gmb-select-location__status {
+		align-self: stretch;
+
+		@include breakpoint( '<480px' ) {
+			text-align: center;
+		}
+
+		@include breakpoint( '480px-960px' ) {
+			align-self: flex-start;
+		}
+
+		@include breakpoint( '<960px' ) {
+			margin-top: 10px;
+		}
+
+		@include breakpoint( '>960px' ) {
+			align-self: center;
+			flex-shrink: 0;
+			margin-left: 15px;
+		}
+
+		.gmb-select-location__connected-icon {
+			color: $alert-green;
+			vertical-align: text-bottom;
+		}
+	}
 }
