Line Chart: Add missing class name and units

--- a/client/components/line-chart/style.scss
+++ b/client/components/line-chart/style.scss
@@ -1,17 +1,17 @@
 .line-chart__line-0 {
 	fill: none;
 	stroke: $blue-dark;
-	stroke-width: 3;
+	stroke-width: 3px;
 }
 
 .line-chart__line-1 {
 	fill: none;
 	stroke: $blue-medium;
-	stroke-width: 3;
+	stroke-width: 3px;
 }
 
 .line-chart__line-2 {
 	fill: none;
 	stroke: $blue-light;
-	stroke-width: 3;
+	stroke-width: 3px;
 }
