Fixed meta lines grey color

--- a/client/components/share/facebook-share-preview/style.scss
+++ b/client/components/share/facebook-share-preview/style.scss
@@ -54,7 +54,7 @@
 }
 
 .facebook-share-preview__profile-line {
-	color: #90949c;
+	color: #616770;
 	margin-bottom: 2px;
 }
 
@@ -64,13 +64,13 @@
 }
 
 .facebook-share-preview__meta-line {
-	color: #90949c;
+	color: #616770;
 	font-size: 12px;
 	line-height: 1.34;
 }
 
 .facebook-share-preview .facebook-share-preview__meta-line a {
-	color: #90949c;
+	color: #616770;
 }
 
 .facebook-share-preview__message p {
