--- a/client/blocks/inline-help/style.scss
+++ b/client/blocks/inline-help/style.scss
@@ -141,7 +141,7 @@
 }
 
 .inline-help__search {
-	.is-help-active & {
+	.is-secondary-view-active & {
 		display: none;
 	}
 
@@ -186,15 +186,18 @@
 	}
 }
 
-.inline-help__contact {
+.inline-help__secondary-view {
 	display: none;
 
 	overflow-y: auto;
 	max-height: 70vh;
 
-	.is-help-active & {
+	.is-secondary-view-active & {
 		display: block;
 	}
+}
+
+.inline-help__contact {
 
 	.help-contact-form {
 		button {
@@ -286,7 +289,7 @@
 		display: none;
 	}
 
-	.is-help-active & {
+	.is-secondary-view-active & {
 		.inline-help__more-button,
 		.inline-help__contact-button {
 			display: none;
