Add fading gradient of the preview site

--- a/client/my-sites/importer/style.scss
+++ b/client/my-sites/importer/style.scss
@@ -273,6 +273,19 @@
 			flex-direction: column;
 			justify-content: center;
 		}
+
+		& .site-importer__site-preview-image {
+			&:after {
+				content: "";
+				position: absolute;
+				top: 0;
+				bottom: 0;
+				left: 0;
+				right: 0;
+				background: linear-gradient(to bottom, rgba(255,255,255,0), rgba(255,255,255,0) 50%, rgba(255,255,255,1));
+			}
+		}
+
 		& .site-importer__site-preview-favicon {
 			vertical-align: middle;
 		}
