--- a/client/components/line-chart/style.scss
+++ b/client/components/line-chart/style.scss
@@ -34,6 +34,10 @@
 	stroke-width: 3px;
 }
 
+.line-chart__line-point {
+	cursor: pointer;
+}
+
 .line-chart__line-end-point-0 {
 	fill: $blue-dark;
 	stroke: $blue-dark;
