Checkout: adding Ebanx fields and validation to tef (#24240)
* initial commit

* initial commit to be squashed, and revert `paymentMethods.byCountry[ 'BR' ]`

Adding validation - still WIP

Toying with further ebanx abstraction ( remove this commit after updating ebanx fields )

* Updated tests for TEF/Ebanx

* Updated tests for redirect payment box
Added snapshot test for select box

--- a/client/my-sites/checkout/checkout/style.scss
+++ b/client/my-sites/checkout/checkout/style.scss
@@ -859,8 +859,7 @@
 		margin: -10px 0;
 	}
 
-	.checkout__credit-card,
-	.checkout__institution {
+	.checkout__credit-card {
 		margin-right: 5px;
 	}
 
