--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -98,6 +98,7 @@
 @import 'components/checklist/style';
 @import 'components/clipboard-button-input/style';
 @import 'components/count/style';
+@import 'components/credit-card/style';
 @import 'components/credit-card-form-fields/style';
 @import 'components/date-picker/style';
 @import 'components/dialog/style';
