Guard against broken FB profile image API

--- a/client/components/share/facebook-share-preview/style.scss
+++ b/client/components/share/facebook-share-preview/style.scss
@@ -24,6 +24,7 @@
 
 .facebook-share-preview__profile-picture-part {
 	flex: 0 0 40px;
+	height: 40px;
 	margin-right: 8px;
 	position: relative;
 	width: 40px;
