FormInputValidation: Add isHidden prop & behaviour

--- a/client/components/forms/form-input-validation/style.scss
+++ b/client/components/forms/form-input-validation/style.scss
@@ -15,6 +15,11 @@
 		color: $alert-yellow;
 	}
 
+	&.is-hidden{
+		animation: none;
+		visibility: hidden;
+	}
+
 	.gridicon {
 		float: left;
 		margin-left: -34px;
