If inventory management for a site is disabled, gray out the input box and show a message.

--- a/client/extensions/woocommerce/app/products/product-form.scss
+++ b/client/extensions/woocommerce/app/products/product-form.scss
@@ -43,6 +43,10 @@
 			padding: 24px;
 		}
 	}
+
+	.form-setting-explanation {
+		padding: 16px;
+	}
 }
 
 .foldable-card.products__variation-card .foldable-card__content {
